# tools-scraper-url-miner

./: logger.py  pyproject.toml  setup.ps1
.venv_url/: pyvenv.cfg
.venv_url/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
docs/: backlog.md  first look.md
